name:                  ambiata-disorder-aeson
version:               0.0.2
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata
synopsis:              disorder-aeson
category:              System
cabal-version:         >= 1.22
build-type:            Simple
description:           disorder-aeson.

library
  build-depends:
                       base                            >= 3          && < 6
                     , aeson                           >= 0.8        && < 1.2
                     , ambiata-disorder-core
                     , QuickCheck                      >= 2.7        && < 2.12
                     , time

  default-language:
                      Haskell2010

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       Disorder.Aeson
                       Disorder.Aeson.Time

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base
                     , ambiata-disorder-aeson
                     , aeson
                     , QuickCheck
                     , time

  default-language:
                      Haskell2010
