name:                  ambiata-disorder-core
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata
synopsis:              disorder-core
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           disorder-core.

library
  build-depends:
                       base                            >= 3          && < 5
                     , QuickCheck                      >= 2.7        && < 2.9
                     , directory                       == 1.2.*
                     , ieee754                         == 0.7.*
                     , quickcheck-text                 >= 0.1.1      && < 0.2
                     , process                         >= 1.2        && < 1.5
                     , semigroups                      >= 0.16       && < 0.19
                     , text                            >= 1.1        && < 1.3
                     , transformers                    >= 0.3        && < 1
                     , template-haskell                >= 2.4

  ghc-options:         -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -fno-warn-redundant-constraints


  hs-source-dirs:
                       src


  exposed-modules:
                       Paths_ambiata_disorder_core
                       Disorder.Core
                       Disorder.Core.Gen
                       Disorder.Core.IO
                       Disorder.Core.Main
                       Disorder.Core.OrdPair
                       Disorder.Core.Property
                       Disorder.Core.Run
                       Disorder.Core.Tripping
                       Disorder.Core.UniquePair
                       Disorder.Core.QuickCheck

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2
  if impl(ghc >= 8.0)
    ghc-options: -fno-warn-redundant-constraints

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , QuickCheck                      >= 2.8.2      && < 2.9
                     , text
                     , quickcheck-instances            == 0.3.*
                     , ieee754                         == 0.7.*
                     , transformers                    >= 0.3        && < 1

test-suite test-cli
  type:                exitcode-stdio-1.0

  main-is:             test-cli.hs

  ghc-options:         -Wall -threaded -O2
  if impl(ghc >= 8.0)
    ghc-options: -fno-warn-redundant-constraints

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
