name:                  ambiata-disorder-core
version:               0.0.3
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata
synopsis:              disorder-core
category:              System
cabal-version:         >= 1.22
build-type:            Simple
description:           disorder-core.
tested-with:           GHC==8.0.2, GHC==7.10.2

library
  build-depends:
                       base                            >= 3          && < 5
                     , QuickCheck                      >= 2.8        && < 2.14
                     , directory                       >= 1.2        && < 1.6
                     , ieee754                         >= 0.7        && < 0.9
                     , quickcheck-text                 >= 0.1        && < 0.2
                     , process                         >= 1.2        && < 1.7
                     , semigroups                      >= 0.16       && < 0.19
                     , text                            >= 1.1        && < 1.3
                     , transformers                    >= 0.3        && < 1
                     , template-haskell                

  default-language:
                      Haskell2010

  ghc-options:         -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -fno-warn-redundant-constraints


  hs-source-dirs:
                       src


  exposed-modules:
                       Disorder.Core
                       Disorder.Core.Gen
                       Disorder.Core.IO
                       Disorder.Core.Main
                       Disorder.Core.OrdPair
                       Disorder.Core.Property
                       Disorder.Core.Run
                       Disorder.Core.Tripping
                       Disorder.Core.UniquePair
                       Disorder.Core.QuickCheck
                       Disorder.Core.Combinators

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2
  if impl(ghc >= 8.0)
    ghc-options: -fno-warn-redundant-constraints

  hs-source-dirs:
                       test

  build-depends:
                       base
                     , ambiata-disorder-core
                     , QuickCheck
                     , text
                     , quickcheck-instances
                     , ieee754
                     , transformers

  default-language:
                      Haskell2010

test-suite test-cli
  type:                exitcode-stdio-1.0

  main-is:             test-cli.hs

  ghc-options:         -Wall -threaded -O2
  if impl(ghc >= 8.0)
    ghc-options: -fno-warn-redundant-constraints

  hs-source-dirs:
                       test

  build-depends:
                       base
                     , ambiata-disorder-core

  default-language:
                      Haskell2010
