name:                  ambiata-disorder-core
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata
synopsis:              disorder-core
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           disorder-core.

library
  build-depends:
                       base                            >= 3          && < 5
                     , QuickCheck                      == 2.7.*
                     , directory                       == 1.2.*
                     , ieee754                         == 0.7.*
                     , quickcheck-text                 == 0.1.*
                     , process                         == 1.2.*
                     , text                            >= 1.1        && < 1.3

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       Paths_ambiata_disorder_core
                       Disorder.Core
                       Disorder.Core.Gen
                       Disorder.Core.IO
                       Disorder.Core.Main
                       Disorder.Core.OrdPair
                       Disorder.Core.Property
                       Disorder.Core.Tripping
                       Disorder.Core.UniquePair
                       Disorder.Core.QuickCheck

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , QuickCheck
                     , text
                     , quickcheck-instances            == 0.3.*
                     , ieee754                         == 0.7.*

test-suite test-cli
  type:                exitcode-stdio-1.0

  main-is:             test-cli.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
