name:                  ambiata-disorder-corpus
version:               0.0.2
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata
synopsis:              disorder-corpus
category:              System
cabal-version:         >= 1.22
build-type:            Simple
description:           disorder-corpus.

library
  build-depends:
                       base                            >= 3          && < 5
                     , QuickCheck                      >= 2.7        && < 2.12

  default-language:
                      Haskell2010

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       Disorder.Corpus

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base
                     , ambiata-disorder-corpus
                     , text
                     , QuickCheck

  default-language:
                      Haskell2010
