name:                  ambiata-disorder-fsm
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata
synopsis:              Final state machine testing
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           Final state machine testing.

library
  build-depends:
                       base                            >= 3          && < 5
                     , containers                      >= 0.5        && < 0.7
                     , exceptions                      == 0.8.*
                     , mtl                             >= 2.1        && < 2.3
                     , QuickCheck                      >= 2.7        && < 2.9
                     , time
                     , transformers                    >= 0.3        && < 0.5

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       Paths_ambiata_disorder_fsm
                       Disorder.FSM
                       Disorder.FSM.Catch
                       Disorder.FSM.Core
                       Disorder.FSM.Property
                       Disorder.FSM.Runner

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base
                     , ambiata-disorder-fsm
                     , containers
                     , mtl
                     , QuickCheck
                     , temporary                      >= 1.1        && < 1.3
                     , transformers
