name:                  ambiata-disorder-lens
version:               0.0.2
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata
synopsis:              disorder-lens
category:              System
cabal-version:         >= 1.22
build-type:            Simple
description:           disorder-lens.

library
  build-depends:
                       base                            >= 3          && < 5
                     , lens                            >= 4.6        && < 4.18
                     , QuickCheck                      >= 2.7        && < 2.13

  default-language:
                      Haskell2010

  ghc-options:
                       -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -fno-warn-redundant-constraints

  hs-source-dirs:
                       src


  exposed-modules:
                       Disorder.Lens

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2
  if impl(ghc >= 8.0)
    ghc-options:       -fno-warn-redundant-constraints

  hs-source-dirs:
                       test

  build-depends:
                       base
                     , ambiata-disorder-lens
                     , lens
                     , QuickCheck

  default-language:
                      Haskell2010
