name:                  disorder-species
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata
synopsis:              disorder-species
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           disorder-species.

library
  build-depends:
                       base                            >= 3          && < 5
                     , array                           == 0.5.*
                     , containers                      == 0.5.*
                     , cond                            == 0.0.*
                     , ListZipper                      == 1.2.*
                     , memoize                         == 0.7.*
                     , monad-loops                     == 0.4.*
                     , numeric-prelude                 == 0.4.*
                     , QuickCheck
                     , random
                     , species                         == 0.3.*
                     , spe                             == 0.6.*
                     , transformers

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Paths_disorder_species
                       Disorder.Species.Gen
                       Disorder.Spe.Gen
                       Disorder.Sp
                       Disorder.Sp.Gen
                       Disorder.Sp.Combinatorial
                       Disorder.Sp.ST

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , disorder-species
                     , directory                       == 1.2.*
                     , process                         == 1.2.*
                     , QuickCheck
                     , quickcheck-instances            == 0.3.*
                     , species                         == 0.3.*
                     , spe                             == 0.6.*
                     , text
